2006-12-04  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	
	Bumped version number.

2006-12-04  Benoît Dejean  <benoit@placenet.org>

	* src/proctable.c: (create_proctree):

	Disabled libsexy as it is currently buggy and unmaintained.
	See and fix #354559,#355252 if you want it back.

2006-12-04  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	
	Released 2.17.3.

2006-12-03  Benoît Dejean  <benoit@placenet.org>

	* src/favorites.c: (is_process_blacklisted):
	* src/interface.c: (update_sensitivity):

	Disabled the process blacklist.
	I don't think somebody really uses this broken feature.
	If you do, please tell me.
	Evil plan is too replace it with a regex based filter.

2006-11-21  Benoît Dejean  <benoit@placenet.org>

	* configure.in:

	Downgradaded pcre dependendy to 6.4.
	See #367827.

2006-11-20  Benoît Dejean  <benoit@placenet.org>

	* src/sysinfo.cpp:

	lsb_release -s is not consistent among distros so
	we don't use it and instead parse the
	"description: value" lines.
	See #374090.

2006-11-20  Benoît Dejean  <benoit@placenet.org>

	* src/sysinfo.cpp:

	Fixed computation of disk space.
	Changed label.
	Closes #??????.

2006-11-19  Benoît Dejean  <benoit@placenet.org>

	* src/memmaps.cpp:

	A little more C++.
	Added #if 0 code, attempt to rewrite tree save_state/get_state.

2006-11-19  Benoît Dejean  <benoit@placenet.org>

	* src/util.c (procman_debug):

	Added relative time since startup in output.

2006-11-18  Benoît Dejean  <benoit@placenet.org>

	* src/interface.c:

	Replaced libgnome by gtk+.

2006-11-18  Benoît Dejean  <benoit@placenet.org>

	* src/memmaps.cpp:

	Reworked to use lsb_release where available.
	Original patch by Deji Akingunola <dakingun@gmail.com>.
	See #374090.

2006-11-17  Benoît Dejean  <benoit@placenet.org>

	* src/memmaps.cpp:

	Reworked and simplified.
	Made maps addition faster.

2006-11-16  Benoît Dejean  <benoit@placenet.org>

	* src/memmaps.cpp:

	First attempt to rewrite some parts in C++.
