@@ -1278,7 +1278,7 @@
           </varlistentry>
           <varlistentry>
             <term>
-              <guilabel>Process Fields</guilabel>
+              <guilabel>Information Fields</guilabel>
             </term>
             <listitem>
               <para>
