@@ -1,5 +1,17 @@
 2006-12-04  Benoît Dejean  <benoit@placenet.org>
 
+	* help/C/gnome-system-monitor.xml:
+	* src/procdialogs.c: (create_proc_field_page),
+	(procdialog_create_preferences_dialog):
+
+	String change in process list preferences dialogue as suggested by
+	Adam Dingle.
+	Update to the help documentation.
+	Patch by Christian Kirbach  <christian.kirbach@siemens.com>.
+	Closes #377048.
+
+2006-12-04  Benoît Dejean  <benoit@placenet.org>
+
 	* configure.in:
 	
 	Bumped version number.
